Font size breaking layout on mobile fix

--- a/app/assets/stylesheets/2022/welcome.css.scss
+++ b/app/assets/stylesheets/2022/welcome.css.scss
@@ -66,7 +66,7 @@ body#acc2022 {
 			vertical-align: middle;
 			
 			h1 {
-				font-size: 80px;
+				font-size: 60px;
 				font-weight: 600;
 				letter-spacing: 7px;
 				line-height: 80px;
@@ -96,6 +96,9 @@ body#acc2022 {
 			background: rgba(0, 0, 0, 0.7);
 			height: 100vh;
 			padding-left: 50%;
+			h1 {
+				font-size: 80px;
+			}
 		}
 		
 		
